# vrctv

./: .gitignore  Cargo.toml  JustFile  README.md  flake.nix  lily.service  resize-browser.lua  setup.sh  vrctv.service
.github/workflows/: publish.yaml
project-lily-common/: Cargo.toml
project-lily-common/src/: lib.rs
project-lily-desktop/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
project-lily-desktop/src/: consts.ts
project-lily-desktop/src-tauri/: Cargo.toml  tauri.conf.json
project-lily-desktop/src-tauri/capabilities/: default.json
project-lily-desktop/src-tauri/icons/: icon.icns
project-lily-desktop/src-tauri/src/: avatars.rs  lib.rs  main.rs  osc.rs  xsoverlay.rs
project-lily-desktop/src/components/: connectionManager.svelte  storeManager.svelte  twitchFilterEditor.svelte
project-lily-desktop/src/lib/: rewardHandler.ts  stores.ts  streamlabs.ts  twitch.ts  websocket.ts
project-lily-desktop/src/routes/: +layout.svelte  menu.svelte
project-lily-desktop/src/routes/debug/: +page.svelte
project-lily-desktop/src/routes/rewards/: +page.svelte
project-lily-desktop/src/routes/twitch/: +page.svelte
project-lily-server/: Cargo.toml
project-lily-server/src/: entities.rs  main.rs  server.rs  streamlabs.rs  twitch.rs
project-lily-server/src/streamlabs/: socket.rs
project-lily-server/src/twitch/: eventsub.rs
vrctv-common/: Cargo.toml
vrctv-common/src/: lib.rs
vrctv-desktop/: .gitignore  package.json  pnpm-lock.yaml
vrctv-desktop/src/: app.html
vrctv-desktop/src-tauri/: Cargo.toml  tauri.conf.json
vrctv-desktop/src-tauri/capabilities/: default.json
vrctv-desktop/src-tauri/icons/: icon.icns
vrctv-desktop/src-tauri/src/: avatars.rs  binding-only.rs  lib.rs  main.rs  osc.rs  overlay.rs  xsoverlay.rs
vrctv-desktop/src/components/: connectionManager.svelte  logo.svelte  parameterEditor.svelte  storeManager.svelte  streamlabsFilterEditor.svelte  twitchFilterEditor.svelte
vrctv-desktop/src/lib/: avatar-list-cache.ts  overlays.ts  rewardHandler.ts  stores.ts  streamlabs.ts  task-parts.ts  twitch.ts  websocket.ts
vrctv-desktop/src/lib/components/: avatar-selector.svelte  avatarSelector.svelte  connection-manager.svelte  connectionManager.svelte  logo.svelte  overlay-preview.svelte  parameter-editor.svelte  parameterEditor.svelte  reward-editor.svelte  server-selector-dialogue.svelte  status-button.svelte  statusButton.svelte  store-manager.svelte  storeManager.svelte  streamlabsFilterEditor.svelte  task-editor.svelte  themeSwitcher.svelte  trigger-editor.svelte  twitchFilterEditor.svelte
vrctv-desktop/src/lib/components/modifiable-queue/: context.svelte.ts  index.ts  queue-collapse.svelte  queue-controls.svelte  queue-item.svelte  queue.svelte
vrctv-desktop/src/lib/components/rewards/: cancel-osc-editor.svelte  cancel-overlay-editor.svelte  set-avatar-editor.svelte  set-osc-editor.svelte  set-overlay-editor.svelte  set-warudo-osc-editor.svelte
vrctv-desktop/src/lib/rewards/: cancel-avatar.ts  cancel-osc.ts  cancel-overlay.ts  set-avatar.ts  set-osc.ts  set-overlay.ts  set-warudo-osc.ts  types.ts
vrctv-desktop/src/lib/stores/: debug.ts  global.ts  overlays.ts  rewards.ts
vrctv-desktop/src/lib/triggers/: and.ts  or.ts  streamlabs-donation.ts  twitch-bit-donation.ts  twitch-channel-points.ts  twitch-message.ts  twitch-whisper.ts  types.ts
vrctv-desktop/src/routes/: +layout.svelte  +page.svelte  menu.svelte
vrctv-desktop/src/routes/debug/: +page.svelte  +page.ts
vrctv-desktop/src/routes/overlays/: +page.svelte
vrctv-desktop/src/routes/rewards/: +page.svelte  +page.ts
vrctv-desktop/src/routes/twitch/: +page.svelte
vrctv-overlay/: Cargo.toml
vrctv-overlay/src/: lib.rs
vrctv-overlay/static/: overlay.html
vrctv-server/: Cargo.toml
vrctv-server/src/: config.rs  main.rs  server.rs  streamlabs.rs  twitch.rs
vrctv-server/src/twitch/: events.rs
(+5 files in other folders)
