[workspace]
resolver = "3"
members = [
    "project-lily-common",
    "project-lily-server",
    "project-lily-desktop\\src-tauri",
    "project-lily-overlay",
]

[workspace.dependencies]
log = "0.4.28"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
specta = "=2.0.0-rc.22"