[workspace]
resolver = "3"
members = [
    "vrctv-common",
    "vrctv-server",
    "vrctv-desktop/src-tauri",
    "vrctv-overlay",
]

[workspace.package]
version = "0.3.0"

[workspace.dependencies]
log = "0.4.28"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
specta = "=2.0.0-rc.22"
