[package]
name = "vrctv-server"
version.workspace = true
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["http2", "ws"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
chrono = "0.4.42"
futures-util = "0.3.31"
listenfd = "1.0.2"
log = { workspace = true }
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.31.0", features = ["bundled"] }
rusqlite = "0.37.0"
serde.workspace = true
serde_json = "1.0.145"
tokio = { workspace = true }
tower-http = { version = "0.6.6", features = ["trace", "timeout"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
vrctv-common = { path = "../vrctv-common" }
uuid = { version = "1.18.1", features = ["v4"] }
twitch_api = { version = "0.7.2", features = ["client", "eventsub", "helix", "pubsub", "reqwest", "tracing"] }
reqwest = { version = "0.12.23", features = ["json"] }
anyhow = { workspace = true }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls", "url"] }
rust_socketio = { version = "0.6.0", features = ["async"] }
dotenv = "0.15.0"
